--- a/Spring-boot-tutorial/pom.xml
+++ b/Spring-boot-tutorial/pom.xml
@@ -64,6 +64,14 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
+    
+    <!-- We added below dependency for Hibernate validation in our Entity file-->
+    <!-- If you go inside and check that it is using the hibernate valitor-->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-validation</artifactId>
+    <version>4.0.1</version>
+</dependency>
 		
 	</dependencies>
 
