--- a/Spring-boot-tutorial/pom.xml
+++ b/Spring-boot-tutorial/pom.xml
@@ -78,6 +78,19 @@
       <artifactId>lombok</artifactId>
       <optional>true</optional>
     </dependency>
+    
+    
+<dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      <scope>runtime</scope>
+    </dependency>    
+	
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-test</artifactId>
+    <scope>test</scope>
+</dependency>	
 		
 	</dependencies>
 
