--- a/Spring-boot-tutorial/src/main/resources/application.properties
+++ b/Spring-boot-tutorial/src/main/resources/application.properties
@@ -2,9 +2,25 @@ spring.application.name=Spring-boot-tutorial
 
 server.port=8082
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+# Database connection
+spring.datasource.url=jdbc:mysql://localhost:3306/dcbapp
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# JPA / Hibernate
+
+#Whenever there is any update in the java object same should be applied to the databse also
+spring.jpa.hibernate.ddl-auto=update
+#Whenever Any query is printed it would show in the log
+spring.jpa.show-sql:true
+
+
