Adding the Custom Configuration and using it in our code

--- a/Spring-boot-tutorial/src/main/resources/application.properties
+++ b/Spring-boot-tutorial/src/main/resources/application.properties
@@ -23,4 +23,6 @@ spring.jpa.hibernate.ddl-auto=update
 #Whenever Any query is printed it would show in the log
 spring.jpa.show-sql:true
 
+#Below is our own custom value and we will pass it to the code using @Value(${welcome.message})
+welcome.message = Welcome to daily code buffer
 
