Converted application.properties file application.yml

--- a/Spring-boot-tutorial/src/main/resources/application.properties
+++ b/Spring-boot-tutorial/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=Spring-boot-tutorial
+#spring.application.name=Spring-boot-tutorial
 
-server.port=8082
+#server.port=8082
 
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:testdb
@@ -11,18 +11,18 @@ server.port=8082
 
 
 # Database connection
-spring.datasource.url=jdbc:mysql://localhost:3306/dcbapp
-spring.datasource.username=root
-spring.datasource.password=admin
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/dcbapp
+#spring.datasource.username=root
+#spring.datasource.password=admin
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # JPA / Hibernate
 
 #Whenever there is any update in the java object same should be applied to the databse also
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 #Whenever Any query is printed it would show in the log
-spring.jpa.show-sql:true
+#spring.jpa.show-sql:true
 
 #Below is our own custom value and we will pass it to the code using @Value(${welcome.message})
-welcome.message = Welcome to daily code buffer
+#welcome.message = Welcome to daily code buffer
 
