--- a/Spring-boot-tutorial/pom.xml
+++ b/Spring-boot-tutorial/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.dailycodebuffer</groupId>
 	<artifactId>Spring-boot-tutorial</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>Spring-boot-tutorial</name>
 	<description>Demo project for Spring Boot</description>
 	<packaging>jar</packaging>
@@ -90,7 +90,12 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-test</artifactId>
     <scope>test</scope>
-</dependency>	
+</dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>	
 		
 	</dependencies>
 
